--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
       href="https://fonts.googleapis.com/css2?family=Orienta&display=swap"
       rel="stylesheet"
     />
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9JV0WGX8MR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-9JV0WGX8MR');
+</script>
     <title>Falicie</title>
   </head>
   <body>
